--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,35 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <title>NodeJS Starter Application</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/style.css">
-  </head>
-
-  <body>
-    <table>
-      <tr>
-        <td style= "width:30%;">
-          <img class = "newappIcon" src="images/newapp-icon.png">
-        <td>
-            <h1>Hi there!</h1>
-          <p>Thanks for creating a
-            <span class = "blue">NodeJS Starter Application</span>.
-            Get started by reading our
-            <a href = "https://www.ng.bluemix.net/docs/#starters/nodejs/index.html#nodejs">documentation</a>
-            or use the Start Coding guide under your app in your dashboard.
-    </table>
-  </body>
-
+<!doctype html>
+<html ng-app="core">
+    <head>
+    <!-- CSS  -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <title>Hello disaster</title>
+     </head>
+    <body>
+        <h1>Simple nodejs App to Turn a Light on an off</h1>
+        <br />
+        <div ng-controller="HomeController">
+        <div class="col m10 s10" ng-controller="MessageController" >
+        <form ng-submit="sendMessage()">
+            <input ng-model="phoneNumber" type="text" placeholder="5555551212"/>
+            <input ng-model="message" type="text" placeholder="Hi Polar Snow"/>
+            <button type="submit" class="btn-large waves-effect waves-light">send message to your friend</button>
+        </form>
+        </div>
+        <div class="col m10 s10" ng-controller="LightController">
+            <button type="submit" ng-click="switchLight()" class="btn-large waves-effect waves-light">{{switchOnOff}}</button>
+        </div>
+        </div>
+        
+    <!--  Scripts-->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-route.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/client.controllers.js"></script>
+    </body>
 </html>
