--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
  
     <!--  Scripts-->
     <script src="/scripts/jquery/dist/jquery.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/angular.min.js"></script>
-    <script src="js/angular-route.min.js"></script>
+    <script src="/scripts/angular/angular.min.js"></script>
+    <script src="/scripts/angular-route/angular-route.min.js"></script>
+    <script src="/scripts/materialize-css/dist/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/client.controllers.js"></script>
     </body>
