--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <script src="/scripts/angular-route/angular-route.min.js"></script>
     <script src="/scripts/materialize-css/dist/js/materialize.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/share.service.js"></script>
     <script src="js/client.controllers.js"></script>
     </body>
 </html>
